# arena-tests

./: AGENTS.md  Cargo.toml  Justfile  README.md
bootstrap/: restore-env.sh
bootstrap/KB/02-product/applets/: activate-subscription.intent.json  refill-prepaid-ai-credits.intent.json
crates/arena-driver/: Cargo.toml
crates/arena-driver/src/: lib.rs  main.rs
crates/arena-metrics/: Cargo.toml
crates/arena-metrics/src/: lib.rs
crates/counterparty-kyc-convergence/: Cargo.toml  README.md
crates/counterparty-kyc-convergence/policies/: no-sanctioned-onboarding.cedar
crates/counterparty-kyc-convergence/src/: main.rs
crates/cross-extension-smoke/: Cargo.toml
crates/cross-extension-smoke/src/: lib.rs
crates/cross-extension-smoke/tests/: arbiter_claim_portfolio.rs  engine_smoke.rs  fuzzy_operator_stack.rs  intent_codec_applets.rs  organism_intent_cases.rs
crates/dim-coverage/: Cargo.toml
crates/dim-coverage/src/: lib.rs
crates/dim-crate-footprint/: Cargo.toml
crates/dim-crate-footprint/src/: lib.rs
crates/dim-determinism/: Cargo.toml
crates/dim-determinism/src/: lib.rs
crates/dim-hermeticity/: Cargo.toml
crates/dim-hermeticity/src/: lib.rs
crates/dim-layering/: Cargo.toml
crates/dim-layering/src/: lib.rs
crates/dim-performance/: Cargo.toml
crates/dim-performance/src/: lib.rs
crates/dim-semver/: Cargo.toml
crates/dim-semver/src/: lib.rs
crates/dim-snapshot-portability/: Cargo.toml
crates/dim-snapshot-portability/src/: lib.rs
crates/intent-cases/: Cargo.toml
crates/intent-cases/src/: lib.rs
reports/: history.jsonl  latest.md
