[workspace]
resolver = "2"
members = [
    "crates/counterparty-kyc-convergence",
    "crates/cross-extension-smoke",
    "crates/intent-cases",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
publish = false

[workspace.dependencies]
# Platform under test — local paths (workspace floor at 3.8.1 / 1.5.0 / 0.7.0).
converge-core         = { path = "../bedrock-platform/converge/crates/core" }
converge-pack         = { path = "../bedrock-platform/converge/crates/pack" }
converge-kernel       = { path = "../bedrock-platform/converge/crates/kernel" }
converge-model        = { path = "../bedrock-platform/converge/crates/model" }
converge-provider     = { path = "../bedrock-platform/converge/crates/provider" }
converge-runtime      = { path = "../bedrock-platform/converge/crates/runtime" }
converge-storage      = { path = "../bedrock-platform/converge/crates/storage" }

# Extensions — wire any subset under test.
converge-arbiter-policy   = { path = "../mosaic-extensions/arbiter-policy/crates/arbiter" }
converge-mnemos-knowledge = { path = "../mosaic-extensions/mnemos-knowledge/crates/mnemos" }
converge-prism-analytics  = { path = "../mosaic-extensions/prism-analytics/crates/prism" }
prism                     = { package = "converge-prism-analytics", path = "../mosaic-extensions/prism-analytics/crates/prism" }
converge-atelier-domain   = { path = "../atelier-showcase/crates/atelier-domain" }
organism-pack             = { path = "../bedrock-platform/organism/crates/pack" }
organism-intent           = { path = "../bedrock-platform/organism/crates/intent" }
organism-planning         = { path = "../bedrock-platform/organism/crates/planning" }
organism-runtime          = { path = "../bedrock-platform/organism/crates/runtime" }
prio-agent-ops            = { path = "../bedrock-platform/helms/crates/prio-agent-ops" }
arena-intent-cases        = { path = "crates/intent-cases" }

# Test utilities
tokio    = { version = "1", features = ["full"] }
anyhow   = "1"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

# Mirror the platform's [patch.crates-io] policy so transitive deps resolve to local head.
[patch.crates-io]
converge-core              = { path = "../bedrock-platform/converge/crates/core" }
converge-pack              = { path = "../bedrock-platform/converge/crates/pack" }
converge-kernel            = { path = "../bedrock-platform/converge/crates/kernel" }
converge-model             = { path = "../bedrock-platform/converge/crates/model" }
converge-provider          = { path = "../bedrock-platform/converge/crates/provider" }
converge-runtime           = { path = "../bedrock-platform/converge/crates/runtime" }
converge-storage           = { path = "../bedrock-platform/converge/crates/storage" }
converge-experience        = { path = "../bedrock-platform/converge/crates/experience" }
converge-optimization      = { path = "../bedrock-platform/converge/crates/optimization" }
converge-protocol          = { path = "../bedrock-platform/converge/crates/protocol" }
converge-client            = { path = "../bedrock-platform/converge/crates/client" }
converge-arbiter-policy    = { path = "../mosaic-extensions/arbiter-policy/crates/arbiter" }
converge-mnemos-knowledge  = { path = "../mosaic-extensions/mnemos-knowledge/crates/mnemos" }
# Local manifold carries the POST + xml + pagination features that
# embassy-vies and embassy-ted depend on; drop this patch once a
# manifold release with those features is on crates.io.
converge-manifold-adapters = { path = "../mosaic-extensions/manifold-adapters/crates/manifold" }
converge-prism-analytics   = { path = "../mosaic-extensions/prism-analytics/crates/prism" }
converge-atelier-domain    = { path = "../atelier-showcase/crates/atelier-domain" }
organism-pack              = { path = "../bedrock-platform/organism/crates/pack" }
organism-intent            = { path = "../bedrock-platform/organism/crates/intent" }
organism-runtime           = { path = "../bedrock-platform/organism/crates/runtime" }
