[package]
name = "arena-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Shared types for arena-tests quality dimensions: Dimension trait, DimensionResult, Verdict, Finding, Report."

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
