[package]
name = "arena-counterparty-kyc-convergence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Counterparty KYC convergence — CONTRACT-SHAPE arena test.
#
# This crate lives in arena-tests (not atelier-showcase) per the
# atelier v1.1.0 policy: scenarios that depend on Stub* / Mock* /
# Fake* / canned-data providers do not count as showcases. They live
# here until a real provider lands.
#
# REAL-by-default per
# ~/dev/reflective/stack/mosaic-extensions/kb/Standards/Real-by-Default Connections.md
# Embassy ports ship stub-only today; without --mock-ok this binary
# exits non-zero naming the gap. With --mock-ok it runs end-to-end
# and clearly labels every step as CONTRACT-SHAPE.

[[bin]]
name = "counterparty-kyc-convergence"
path = "src/main.rs"

[dependencies]
embassy-pack = { package = "converge-embassy-pack", path = "../../../mosaic-extensions/embassy-ports/crates/pack", version = "1.3.0" }
embassy-ofac-sls = { package = "converge-embassy-ofac-sls", path = "../../../mosaic-extensions/embassy-ports/crates/ofac-sls", version = "0.1.0", features = ["live"] }
embassy-gleif = { package = "converge-embassy-gleif", path = "../../../mosaic-extensions/embassy-ports/crates/gleif", version = "0.1.0", features = ["live"] }

clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
