[package]
name = "arena-counterparty-kyc-convergence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Counterparty KYC convergence — CONTRACT-SHAPE arena test.
#
# This crate lives in arena-tests (not atelier-showcase) per the
# atelier v1.1.0 policy: scenarios that depend on Stub* / Mock* /
# Fake* / canned-data providers do not count as showcases. They live
# here until a real provider lands.
#
# REAL-by-default per
# ~/dev/reflective/mosaic-extensions/kb/Standards/Real-by-Default Connections.md
# Embassy ports ship stub-only today; without --mock-ok this binary
# exits non-zero naming the gap. With --mock-ok it runs end-to-end
# and clearly labels every step as CONTRACT-SHAPE.

[[bin]]
name = "counterparty-kyc-convergence"
path = "src/main.rs"

[dependencies]
embassy-pack = { package = "converge-embassy-pack", path = "../../../mosaic-extensions/embassy-ports/crates/pack", version = "1.3.0" }
embassy-ofac-sls = { package = "converge-embassy-ofac-sls", path = "../../../mosaic-extensions/embassy-ports/crates/ofac-sls", version = "1.3.1", features = ["live"] }
embassy-eu-sanctions = { package = "converge-embassy-eu-sanctions", path = "../../../mosaic-extensions/embassy-ports/crates/eu-sanctions", version = "1.3.1", features = ["live"] }
embassy-commerce-csl = { package = "converge-embassy-commerce-csl", path = "../../../mosaic-extensions/embassy-ports/crates/commerce-csl", version = "1.3.1", features = ["live"] }
embassy-gleif = { package = "converge-embassy-gleif", path = "../../../mosaic-extensions/embassy-ports/crates/gleif", version = "1.3.1", features = ["live"] }
embassy-ted = { package = "converge-embassy-ted", path = "../../../mosaic-extensions/embassy-ports/crates/ted", version = "1.3.1", features = ["live"] }

clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
