[package]
name = "cross-extension-smoke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
arbiter            = { package = "converge-arbiter-policy", path = "../../../mosaic-extensions/arbiter-policy/crates/arbiter", features = ["analysis"] }
arena-intent-cases = { workspace = true }
chrono             = { workspace = true }
converge-core      = { workspace = true }
converge-kernel    = { workspace = true }
converge-pack      = { workspace = true }
prism              = { workspace = true }
organism-intent    = { workspace = true }
organism-pack      = { workspace = true }
organism-planning  = { workspace = true }
organism-runtime   = { workspace = true }
prio-agent-ops     = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
