[package]
name = "dim-crate-footprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Arena-tests quality dimension: crate-footprint."

[dependencies]
arena-metrics = { workspace = true }

[lints]
workspace = true
